// Autogenerated by ../../tools/ftrace_proto_gen/ftrace_to_proto.cc do not edit.
syntax = "proto3";
message SchedSwitchFtraceEvent {
  string prev_comm = 1;
  int32 prev_pid = 2;
  int32 prev_prio = 3;
  int32 prev_state = 4;
  string next_comm = 5;
  int32 next_pid = 6;
  int32 next_prio = 7;
}
