/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package perfetto.protos;

message HeapProfileFrameStats {
  message Frame { optional string name = 1; }

  message FrameStats {
    optional Frame frame = 1;

    // Count of objects allocated by this frame
    optional int64 total_count = 2;
    // Count of bytes allocated by this frame
    optional int64 total_bytes = 3;

    // Count of allocated objects that were not freed
    optional int64 delta_count = 4;
    // Count of allocated bytes that were not freed
    optional int64 delta_bytes = 5;
  }

  message ProcessInstanceStats {
    optional string process_name = 1;
    repeated FrameStats frame_stats = 2;
  }

  repeated ProcessInstanceStats instance_stats = 1;
}
